Fix page spacing

--- a/src/styles/layout/pagescreen.scss
+++ b/src/styles/layout/pagescreen.scss
@@ -3,23 +3,19 @@
     min-height: calc(100vh - 60px);
     margin: auto;
     max-width: 1600px;
-    padding: 30px;
+    padding: 50px 30px 0;
     width: 100%;
 
     @media only screen and (min-width: 600px) {
-        padding: 50px 60px;
+        padding: 100px 60px 0;
     }
 
     @media only screen and (min-width: 769px) {
-        padding: 50px 100px;
+        padding: 100px 100px 0;
     }
 
     @media only screen and (min-width: 1024px) {
-        padding: 80px 200px;
-    }
-
-    &:last-child {
-        margin-top: -60px;
+        padding: 160px 200px 0;
     }
 
     &--flex {
